fix: fix summary sup contrast

--- a/theme/less/components/summary.less
+++ b/theme/less/components/summary.less
@@ -41,7 +41,7 @@ Summaries allow users to have an overview of content and navigate between page s
 
     .fr-summary__link {
         .sup, .sup::before, .sup::after  {
-            color: @text-mention-grey;
+            color: @contrast-grey-100;
         }
     }
 
